CRF-12: Integration with location reference data
Added openfeign dependency to build.gradle to allow creation of feign client for location reference data service.  Also added IDAM and S2S authorisation dependencies.

Added IDAM and S2S configuration to application.yaml.

Added RefDataLocationApi class to declare feign client for location reference data service.  Added associated configuration class and an error decoder to handle error responses from location reference data service.

Updated RefDataService to replace stub with actual implementation.

Updated/added new test classes to cover interaction with location reference data service.  Integration tests use WireMock, via a new WireMockIntTestBase class, to simulate IDAM, S2S and location reference data services.

Updated MockMvc annotated tests to exclude filters.  This allows tests to function without IDAM/S2S services being available.